gathered statistics for different garbage collectors