@@ -5,17 +5,13 @@ import javax.management.ObjectName;
 import java.lang.management.ManagementFactory;
 
 /*
--Xmx256m
--Xms256m
--XX:+PrintGCDetails
--XX:+PrintGCDateStamps
--Xloggc:./logs/serial_gc.log
--XX:GCLogFileSize=1M
+-Xmx256m -Xms256m -XX:+UseSerialGC
 ======================
+use one of the garbage collectors for statistics:
 -XX:+UseSerialGC
 -XX:+UseParallelGC
--XX:+UseParallelOldGC
 -XX:+UseConcMarkSweepGC
+-XX:+UseG1GC
  */
 
 public class Main {
@@ -25,7 +21,7 @@ public class Main {
         ObjectName name = new ObjectName("ru.otus:type=Benchmark");
         Benchmark mbean = new Benchmark();
         mbs.registerMBean(mbean, name);
-        int size = 5000;
+        int size = 2000;
         mbean.setSize(size);
         mbean.run();
     }
